force-app/main/default/objects/Publication_Count__c/Publication_Count__c.object-meta.xml
<CustomObject>
    <description
  >This object is used to track the current count of qualified subscribers as of a specific date per publication.</description>
    <label>Publication Count</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Publication Count Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>