force-app/main/default/objects/Publication_Count__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description
  >The count of 1 year subscriptions for this publication as of a specific date.</description>
    <inlineHelpText
  >The count of 1 year subscriptions for this publication as of a specific date.</inlineHelpText>
    <label>Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>