force-app/main/default/objects/Publication_Count__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description
  >Grouping of count data for year over year comparisons.</description>
    <inlineHelpText
  >Grouping of count data for year over year comparisons.</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jan 15th</fullName>
            </value>
            <value>
                <fullName>Jan 31st</fullName>
            </value>
            <value>
                <fullName>Feb 15th</fullName>
            </value>
            <value>
                <fullName>Feb 28th</fullName>
            </value>
            <value>
                <fullName>Mar 15th</fullName>
            </value>
            <value>
                <fullName>Mar 31st</fullName>
            </value>
            <value>
                <fullName>Apr 15th</fullName>
            </value>
            <value>
                <fullName>Apr 30th</fullName>
            </value>
            <value>
                <fullName>May 15th</fullName>
            </value>
            <value>
                <fullName>May 31st</fullName>
            </value>
            <value>
                <fullName>Jun 15th</fullName>
            </value>
            <value>
                <fullName>Jun 30th</fullName>
            </value>
            <value>
                <fullName>Jul 15th</fullName>
            </value>
            <value>
                <fullName>Jul 31st</fullName>
            </value>
            <value>
                <fullName>Aug 15th</fullName>
            </value>
            <value>
                <fullName>Aug 31st</fullName>
            </value>
            <value>
                <fullName>Sep 15th</fullName>
            </value>
            <value>
                <fullName>Sep 30th</fullName>
            </value>
            <value>
                <fullName>Oct 15th</fullName>
            </value>
            <value>
                <fullName>Oct 31st</fullName>
            </value>
            <value>
                <fullName>Nov 15th</fullName>
            </value>
            <value>
                <fullName>Nov 30th</fullName>
            </value>
            <value>
                <fullName>Dec 15th</fullName>
            </value>
            <value>
                <fullName>Dec 31st</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>