force-app/main/default/objects/Publication_Count__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <description
  >Auto-populated percent of count compared to the total circulation for this publication. Controlled through a workflow rule / field update.</description>
    <inlineHelpText
  >Auto-populated percent of count compared to the total circulation for this publication. Controlled through a workflow rule / field update.</inlineHelpText>
    <label>Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>